--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 28
 
     defaultConfig {
-        applicationId "com.kilnn.topsnackbar.sample"
+        applicationId "com.github.kilnn.topsnackbar.sample"
         minSdkVersion 14
         targetSdkVersion 28
         versionCode 1
